# image-histogram-app

./: .gitignore  CLAUDE.md  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/histogramapp/histogram_app/: MainActivity.kt
docs/: 准确性测试报告.md  开发手册.md  测试指南.md
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/ffi/: histogram_ffi.dart
lib/ui/: camera_page.dart  histogram_painter.dart  home_page.dart
native/: CMakeLists.txt  histogram.cpp  histogram.h  histogram_core.podspec
native/bench/: bench.cpp
native/tests/: accuracy_cases.cpp  golden_check.py  verify_gray.cpp
test/: widget_test.dart
